# slap

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
lua542/: README.md  lua-config.cmake
scripts/: run.sh  winbuild.sh
src/: main.cpp  slap.h  test.lua
